--- a/src/assets/css/blog.css
+++ b/src/assets/css/blog.css
@@ -1,4 +1,61 @@
+.card {
+  padding: 0 10px;
+  position: relative;
+}
 .card .card-link {
   text-decoration: none;
   color: #333;
+  transition: all 0.25;
+}
+.card .card-link:hover {
+  filter: brightness(0.5);
+}
+.card .card-link .card-label {
+  position: absolute;
+  background-color: gray;
+  color: #fff;
+  font-size: 12px;
+  padding: 5px 10px;
+}
+.card .card-link .card-image {
+  width: 100%;
+}
+.card .card-link .card-time {
+  text-align: center;
+}
+.card .card-link .card-title {
+  font-size: 30px;
+  font-weight: bold;
+  margin: 0;
+}
+.card .card-link .avatar {
+  display: flex;
+  align-items: center;
+}
+.card .card-link .avatar .avatar-icon {
+  overflow: hidden;
+  border-radius: 5px;
+}
+.card .card-link .avatar .avatar-icon img {
+  border-radius: 50%;
+  margin-right: 10px;
+}
+.selection-button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.selection-button .button {
+  text-decoration: none;
+  color: #fff;
+  transition: box-shadow 0.25s;
+  background-color: #555;
+  padding: 15px 60px;
+  border-radius: 5px;
+  font-size: 15px;
+  box-shadow: 5px 5px 5px #b39e9e;
+  font-weight: bold;
+}
+.selection-button .button:hover {
+  box-shadow: none;
 }/*# sourceMappingURL=blog.css.map */
